Restrict CORS origins, fix migration numbering, and clean up duplicate method
- Replace wildcard CORS with configurable allowed-origins (defaults to localhost)
- Enable credentials support for CORS
- Renumber migrations V5→V2, V6→V3 to eliminate gaps
- Remove duplicate getCompiledClass() method in TestRunnerService
- Add CORS_ALLOWED_ORIGINS to .env.example

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>